Fixes z-index issue with the 'jump to' box and adds dropshadow to that box

--- a/style.css
+++ b/style.css
@@ -790,6 +790,16 @@ a:hover {
 .mx {
 }
 
+/* The 'jump to' box */
+#lstRecordLayout {
+	/* Related to issue #4 */
+	z-index: 2;
+
+	-webkit-box-shadow: 0px 5px 28px -10px rgba(0,0,0,0.8);
+	-moz-box-shadow: 0px 5px 28px -10px rgba(0,0,0,0.8);
+	box-shadow: 0px 5px 28px -10px rgba(0,0,0,0.8);	
+}
+
 .calListTable td{
 	border-bottom:1px solid #efefef;
 	border-left:1px solid #efefef;
